--- a/WSViajes/WSViajes/Web.config
+++ b/WSViajes/WSViajes/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="JWT_SECRET_KEY" value="WS_VIAJES_REDDAM_MEDM_2019" />
+      <add key="JWT_SECRET_KEY" value="WS_VIAJES_REDDAM_MEDM_2019" />
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:51157" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:51157" />
     <add key="JWT_EXPIRE_DAYS" value="100" />
@@ -20,12 +20,11 @@
     <add key="SERVER_KEY_MAPS" value="AIzaSyAx_MQ3PvBlWz1a42tCO_ZNTGK5w3EbXbY" />
     <add key="URI_API_MAPS_DISTANCE" value="https://maps.googleapis.com/maps/api/directions/json" />
     <add key="URI_APP_ANDROID" value="https://play.google.com/store/apps/details?id=mx.reddam.rdcliente" />
-    <add key="SMTP_SERVER" value="mail.fastrun.mx" />
-    <add key="SMTP_SERVER_PORT" value="587" />
-    <add key="SMTP_SERVER_USE_SSL" value="false" />
-    <add key="SMTP_USER" value="contacto@fastrun.mx" />
-    <add key="SMTP_PWD" value="K/83Cbb9rF" />
-    <add key="SMTP_PWD" value="K/83Cbb9rF" />
+    <add key="SMTP_SERVER" value="smtpout.secureserver.net" />
+    <add key="SMTP_SERVER_PORT" value="80" />
+    <add key="SMTP_SERVER_USE_SSL" value="true" />
+    <add key="SMTP_USER" value="mdominguez@reddam.mx" />
+    <add key="SMTP_PWD" value="Mario.690" />
     <add key="OPNPY_KEY" value="sk_a896b738bdc541a599e75c52df080bb4" />
     <add key="OPNPY_MERCHANT" value="mes0ipoqxgvxnuyu4kpg" />
     <add key="OPNPY_PROD" value="false" />
@@ -94,7 +93,7 @@
   </runtime>
   <connectionStrings>
     <!--LOCAL-->
-    <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QEP04AU\SQLEXPRESS;initial catalog=Viajes;persist security info=True;user id=sa;password=Mario690;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--LOCAL MAC-->
     <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Viajes;persist security info=True;user id=sa;password=reallyStrongPwd123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     -->
@@ -104,7 +103,7 @@
     -->
   
     <!--HOST GODADY-->
-     <add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.225.145;initial catalog=Viajes;persist security info=True;user id=usr_viajes;password=pwd_viajes;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+     <!--<add name="ViajesEntities" connectionString="metadata=res://*/Modelo.ModeloViajes.csdl|res://*/Modelo.ModeloViajes.ssdl|res://*/Modelo.ModeloViajes.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=198.71.225.145;initial catalog=Viajes;persist security info=True;user id=usr_viajes;password=pwd_viajes;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
 
   </connectionStrings>
   <entityFramework>
@@ -118,6 +117,7 @@
     </providers>
   </entityFramework>
   <system.webServer>
+    <!--Para error de goddady en put https://stackoverflow.com/questions/19162825/web-api-put-request-generates-an-http-405-method-not-allowed-error-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
