--- a/WSViajes/WSViajes/packages.config
+++ b/WSViajes/WSViajes/packages.config
@@ -26,9 +26,23 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Azure.Services.AppAuthentication" version="1.4.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="3.0.8" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
@@ -36,14 +50,29 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Openpay" version="1.0.25" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
+  <package id="Serilog" version="2.10.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.MSSqlServer" version="5.6.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.PeriodicBatching" version="2.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net472" />
   <package id="System.Interactive.Async" version="4.1.1" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Async" version="4.1.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
