--- a/WSViajes/WSViajes/WSViajes.csproj
+++ b/WSViajes/WSViajes/WSViajes.csproj
@@ -334,6 +334,7 @@
     <Compile Include="Models\Request\CalculaCostoEntrega.cs" />
     <Compile Include="Models\Request\CreaTarjetaOpenPayRequest.cs" />
     <Compile Include="Models\Request\EnviaNotificacionRequest.cs" />
+    <Compile Include="Models\Request\InsertaActualizaBannerRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaConductorRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaDireccionRequest.cs" />
     <Compile Include="Models\Request\InsertaActualizaExtraRequest.cs" />
